# wormhole-svm-test

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/wormhole-svm-cli/: Cargo.toml
crates/wormhole-svm-cli/src/: main.rs
crates/wormhole-svm-test/: Cargo.toml
crates/wormhole-svm-test/src/: guardian.rs  lib.rs  litesvm.rs  resolver.rs  vaa.rs
crates/wormhole-svm-test/tests/: emit_message_example.rs  verify_vaa_example.rs
programs/vaa-verifier-example/: Cargo.toml
programs/vaa-verifier-example/src/: lib.rs
src/: lib.rs  litesvm.rs
